@@ -1,3 +1,8 @@
+2024-04-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/bonds.cpp: Use QuantLib::Bond::Price in yield calculation
+	* src/zero.cpp: Use QuantLib::Bond::Price in yield calculation
+
 2024-03-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release and date
